[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nytimes-rpa"
version = "0.1.0"
dependencies = [
    "selenium==4.12.0",
]
authors = [
  { name="Rato Pythonista", email="ratopythonista@gmail.com" },
]
description = "New York Times RPA"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ratopythonista/nytimes-rpa"
"Bug Tracker" = "https://github.com/ratopythonista/nytimes-rpa/issues"